--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,8 @@ de:
   layouts:
     navbar:
       store: "Shop"
-      cart:  "Warenkorb"
+      cart: "Warenkorb"
+      home: "Home"
   catalog:
     product:
       addToCart: "in den Warenkorb"
